Change latest disclosure id list to mutable